--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FCFCFC" />
-    <meta
-      name="Agify UI"
-      content="A UI for Agify API made by React!"
-    />
+    <meta name="Agify UI" content="A UI for Agify API made by React!" />
 
     <title>React App</title>
   </head>
